Adição de novos parâmetros de busca na API searchPlaceByQuery.
